--- a/index.css
+++ b/index.css
@@ -20,6 +20,11 @@ body::-webkit-scrollbar {
     display: none;
 }
 
+/* General */
+.container {
+    padding: 0 26px;
+}
+
 /* --------- Header --------- */
 nav {
     display: flex;
@@ -273,9 +278,6 @@ section.vans > h2 {
 }
 
 /* van detail */
-.van-detail {
-    padding: 0 26px;
-}
 .van-header {
     display: flex;
     gap: 10px;
@@ -332,7 +334,6 @@ section.vans > h2 {
 .host-nav {
     display: flex;
     align-items: center;
-    padding: 0 26px;
 }
 .host-nav a {
     text-decoration: none;
@@ -352,9 +353,6 @@ section.vans > h2 {
 }
 
 /* Vans */
-.host-vans {
-    padding: 0 26px;
-}
 .host-vans h2 {
     font-weight: 700;
     font-size: 32px;
@@ -400,9 +398,6 @@ section.vans > h2 {
 }
 
 /* Van Detail */
-.host-van-detail {
-    padding: 0 26px;
-}
 .host-van-detail-info {
     margin-block: 40px;
     padding: 25px;
@@ -498,5 +493,33 @@ section.vans > h2 {
     height: 100px;
     border-radius: 5px;
 }
-
 /* ------------- End Host ------------- */
+
+/* 404 page */
+.not-found {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-block: 100px;
+}
+.not-found h1 {
+    font-weight: 700;
+    font-family: Inter;
+    font-size: 32px;
+    line-height: 42px;
+}
+.not-found a {
+    font-family: Inter;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 31.66px;
+    letter-spacing: 0%;
+    text-align: center;
+    text-decoration: none;
+    background-color: #161616;
+    color: #FFF;
+    border-radius: 5px;
+    width: 100%;
+    padding: 0.5em 0;
+}
