--- a/index.css
+++ b/index.css
@@ -24,6 +24,9 @@ body::-webkit-scrollbar {
 .container {
     padding: 0 26px;
 }
+.text-danger {
+    color: #FF0000;
+}
 
 /* --------- Header --------- */
 nav {
@@ -523,3 +526,56 @@ section.vans > h2 {
     width: 100%;
     padding: 0.5em 0;
 }
+
+/* login page */
+.login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-block: 50px;
+}
+.login h1 {
+    font-family: Inter;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 24px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.login-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+.login-form input {
+    width: 100%;
+    height: 50px;
+    border: 1px solid #DADADA;
+    padding: 0 10px;
+}
+.login-form input[type="email"] {
+    border-top-right-radius: 6px;
+    border-top-left-radius: 6px;
+}
+.login-form input[type="password"] {
+    border-top: none;
+    border-bottom-right-radius: 6px;
+    border-bottom-left-radius: 6px;
+}
+.login-form button {
+    width: 100%;
+    height: 50px;
+    background-color: var(--primary-color);
+    color: #FFF;
+    border: none;
+    border-radius: 5px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 24px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
